<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".DemoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:text="@string/demo_title"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:id="@+id/iconButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/action_search"
                android:text="@string/icon_left"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:id="@+id/IconButton01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/action_search"
                android:text="@string/icon_left_padding"
                app:iconPadding="10dp"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/action_search"
                android:text="@string/icon_left_text_center"
                app:center="without_drawable"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:id="@+id/iconButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/action_search"
                android:text="@string/icon_right"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:id="@+id/IconButton02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/action_search"
                android:text="@string/icon_right_padding"
                app:iconPadding="10dp"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/action_search"
                android:text="@string/icon_right_text_center"
                app:center="without_drawable"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="center all"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/action_search"
                android:text="@string/CENTER_TEST"
                app:center="all"
                app:iconPadding="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="center but drawable"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/action_search"
                android:text="@string/CENTER_TEST"
                app:center="without_drawable"
                app:iconPadding="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="center text only"/>

            <com.phillipcalvin.iconbutton.IconButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/action_search"
                android:text="@string/CENTER_TEST"
                app:center="text_only"
                app:iconPadding="30dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>